network-policy/1.ns.yaml
apiVersion: v1
kind: Namespace
metadata:  
  name: poc-anthos  
  labels:    
    env: poc-anthos
