network-policy/5.deployment-and-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  namespace: poc-anthos
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: poc-anthos
  labels:
    app: hello
spec:
  selector:
    app: hello
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
